--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="title-container">
-        <h1 id="title">Nick Diniz's Appointment Scheduler</h1>
+        <h1 id="title">NickDiniz.com</h1>
     </div>
 	
 	<img id="nick-image" src="nick.png" alt="Nick Image">
