--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nick Diniz Appointment Scheduler</title>
+    <title>Nick Diniz Official Website</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="nick.ico" type="image/x-icon">
 
 </head>
 <body>
     <div id="title-container">
-        <h1 id="title">Nick Diniz's Appointment Scheduler</h1>
+        <h1 id="title">Sorry... this site is currently unavailable. try again later.</h1>
     </div>
 	
 	<img id="nick-image" src="nick.png" alt="Nick Image">
