--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div id="title-container">
-        <h1 id="title">Sorry... this site is currently unavailable. try again later.</h1>
+        <h1 id="title">"I cant stop cracking freshman"</h1>
+		<h1 id="title">-Nick Diniz 2024</h1>
     </div>
 	
 	<img id="nick-image" src="nick.png" alt="Nick Image">
