--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <div id="title-container">
-        <h1 id="title">"I cant stop cracking freshman"</h1>
-		<h1 id="title">-Nick Diniz 2024</h1>
+        <h2 id="title">it was fun while it lasted</h2>
+		<h2 id="title">tell nick to #FreeNickDiniz.com</h2>
     </div>
-	
-	<img id="nick-image" src="nick.png" alt="Nick Image">
 </body>
 </html>
