--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <div id="title-container">
-        <h2 id="title">it was fun while it lasted</h2>
-		<h2 id="title">tell nick to #FreeNickDiniz.com</h2>
+	<h2 id="title">#FreeNickDiniz.com</h2>
     </div>
 </body>
 </html>
