--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <div id="title-container">
-	<h2 id="title">#FreeNickDiniz.com</h2>
-    </div>
+    <video autoplay loop muted playsinline style="position: absolute; width: 100%; height: 100%; object-fit: cover;">
+    <source src="nick.mp4" type="video/mp4">
+</video>
 </body>
 </html>
