--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
 </head>
 <body>
-    <video autoplay loop muted playsinline style="position: absolute; width: 100%; height: 100%; object-fit: cover;">
-    <source src="nick.mp4" type="video/mp4">
+    <video autoplay muted loop>
+    <source src="https://github.com/edht1/nickdiniz/raw/refs/heads/main/nick.mp4" type="video/mp4">
+    Your browser does not support the video tag.
 </video>
+<style>
+    video {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+</style>
 </body>
 </html>
