--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <video autoplay muted loop>
+    <video autoplay muted loop playsinline>
     <source src="https://github.com/edht1/nickdiniz/raw/refs/heads/main/nick.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
