--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <title>Nick Diniz Official Website</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="nick.ico" type="image/x-icon">
-
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-E17RJY5EE7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-E17RJY5EE7');
+    </script>
 </head>
 <body>
-<video autoplay muted loop playsinline>
-    <source src="https://www.dropbox.com/scl/fi/1mc8xvalamebj6yozvxb7/nick.mp4?rlkey=eohzaf53d6mras5o84vqvj85s&raw=1" type="video/mp4">
-</video>
 
-<style>
-    video {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-    }
-</style>
+<h1>NEW</h1>
+ <h1>NICK</h1>
+ <h1>DINIZ</h1>
+ <h1>WEBSITE</h1>
+ <h1>COMING</h1>
+ <h1>SOON</h1>
+
 </body>
 </html>
