--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nick Diniz Official Website</title>
     <link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="nick.ico" type="image/x-icon">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-E17RJY5EE7"></script>
+    <link rel="icon" href="nick.ico" type="image/x-icon">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E17RJY5EE7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -16,12 +16,10 @@
 </head>
 <body>
 
-<h1>NEW</h1>
- <h1>NICK</h1>
- <h1>DINIZ</h1>
- <h1>WEBSITE</h1>
- <h1>COMING</h1>
- <h1>SOON</h1>
+<h1>Welcome to NickDiniz.com</h1>
+<h2>Please read the <a href="terms.html" style="color: blue;">terms and conditions</a> before entering the site.</h2>
+
+<button onclick="window.location.href='video.html'">Enter Site</button>
 
 </body>
 </html>
