--- a/terms.html
+++ b/terms.html
@@ -26,12 +26,12 @@
     <li>You must refer to Nick Diniz only as "King" in all correspondence, legal or otherwise.</li>
     <li>You agree to send Nick Diniz the sum of $120 (One hundred twenty) United States Dollars in legal tender dollar bills or check made out to Nicholas Diniz.</li>
     <li>In case of a breach of these terms, you consent to being followed and kidnapped by a NickDiniz.com associate and kept in a 4 foot by 4 foot metal cage and stripped down like an animal.</li>
-    <li>Nick Diniz is now the permanent owner of your house and will need the deed to said house delivered to him within a 30 days.</li>
+    <li>Nick Diniz is now the permanent owner of your house and will need the deed to said house delivered to him within 30 days.</li>
     <li>Nick Diniz reserves the right to require a "Blumpkin" at any time, and you must grant it upon request.</li>
     <li>You agree that Nick Diniz is the most handsome, smart, athletic, muscular guy in school.</li>
 </ul>
 
-<p>If you do not agree to these terms, please close the website and do not click the "Enter" button on the front page.</p>
+<p>If you do not agree to these terms, please close the website and do not click the "Enter" button on any page of the website.</p>
 
 <p><strong>Thank you for your visit.</strong></p>
 
