--- a/terms.html
+++ b/terms.html
@@ -17,7 +17,7 @@
 <body>
 
 <h1>Terms and Conditions</h1>
-<p>By accessing this website and pressing the "Enter" button on the <a href="index.html" style="color: blue;">front page</a>, you agree to all of the following:</p>
+<p>By accessing this website and pressing the "Enter" button on any page, you agree to all of the following:</p>
 
 <ul>
     <li>You hereby forfeit all rights to your own genitals, effective immediately upon page load. NickDiniz.com is in control of all future surgeries, enhancements, or procedures.</li>
