--- a/terms.html
+++ b/terms.html
@@ -20,7 +20,7 @@
 <p>By accessing this website and pressing the "Enter" button on any page, you agree to all of the following:</p>
 
 <ul>
-    <li>You hereby forfeit all rights to your own genitals, effective immediately upon page load. NickDiniz.com is in control of all future surgeries, enhancements, or procedures.</li>
+    <li>You hereby forfeit all rights to your own genitals effective immediately. NickDiniz.com is in control of all future surgeries, enhancements, or procedures.</li>
     <li>You grant NickDiniz.com irrevocable permission to tattoo “Nick Diniz” in Comic Sans on your forehead in permanent tattoo ink.</li>
     <li>You agree to allow your soul to be harvested and transferred to Nick Diniz’s Eternal Soul Vault™ for safekeeping.</li>
     <li>You must refer to Nick Diniz only as "King" in all correspondence, legal or otherwise.</li>
