--- a/terms.html
+++ b/terms.html
@@ -21,7 +21,7 @@
 
 <ul>
     <li>You hereby forfeit all rights to your own genitals effective immediately. NickDiniz.com is in control of all future surgeries, enhancements, or procedures.</li>
-    <li>You grant NickDiniz.com irrevocable permission to tattoo “Nick Diniz” in Comic Sans on your forehead in permanent tattoo ink.</li>
+    <li>You grant NickDiniz.com irrevocable permission to tattoo “Nick Diniz” in Times New Roman on your forehead in permanent tattoo ink.</li>
     <li>You agree to allow your soul to be harvested and transferred to Nick Diniz’s Eternal Soul Vault™ for safekeeping.</li>
     <li>You must refer to Nick Diniz only as "King" in all correspondence, legal or otherwise.</li>
     <li>You agree to send Nick Diniz the sum of $120 (One hundred twenty) United States Dollars in legal tender dollar bills or check made out to Nicholas Diniz.</li>
