--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <h1>Welcome to NickDiniz.com</h1>
-<h2>Please read the <a href="terms.html" style="color: blue;">terms and conditions</a> before entering the site.</h2>
+<h2>Have a suggestion? add it to the <a href="https://forms.gle/4RRsDunbfLpxwh94A" style="color: blue;">google form</a></h2>
 
 <button onclick="window.location.href='video.html'">Enter Site</button>
 
