--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>Welcome to NickDiniz.com</h1>
 <h2>Have a suggestion? add it to the <a href="https://forms.gle/4RRsDunbfLpxwh94A" style="color: blue;">google form</a></h2>
 
-<!-- <button onclick="window.location.href='video.html'">Enter Site</button> -->
+<button onclick="window.location.href='video.html'">Enter Site</button>
 
 </body>
 </html>
